WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25872
aria-labeledby appends all siblings instead of all children to aria name
https://bugs.webkit.org/show_bug.cgi?id=25872
Summary
aria-labeledby appends all siblings instead of all children to aria name
chris fleizach
Reported
2009-05-19 12:27:12 PDT
it looks like aria-labeled by is appending all siblings instead of all children to an aria name
Attachments
patch
(7.28 KB, patch)
2009-05-19 15:18 PDT
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-05-19 15:18:04 PDT
Created
attachment 30484
[details]
patch
chris fleizach
Comment 2
2009-05-19 15:31:53 PDT
http://trac.webkit.org/changeset/43877
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug