Bug 25872: aria-labeledby appends all siblings instead of all children to aria name https://bugs.webkit.org/show_bug.cgi?id=25872

Canonical link: https://commits.webkit.org/35791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43877 268f45cc-cd09-0410-ab3c-d52691b4dbfc